--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,10 +1,10 @@
 <!-- <h1><%= @team.name %></h1>
 <h2>Team Motto: <%= @team.motto %></h1>
-  <% @team.members.each do |hero| %>
-    <h2>Hero Name: <%= hero.name %></h2>
-    <p>Hero Power: <%= hero.power %></p>
-    <p>Hero Biography: <%= hero.bio %></p>
-  <% end %> -->
+#  <% @team.members.each do |hero| %>
+#    <h2>Hero Name: <%= hero.name %></h2>
+#    <p>Hero Power: <%= hero.power %></p>
+#    <p>Hero Biography: <%= hero.bio %></p>
+#  <% end %> -->
 
 
 <h1><%= @team.name %></h1>
