--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,4 +1,4 @@
-<!-- <h1><%= @team.name %></h1>
+<!-- <h1>#<%= @team.name %></h1>
 <h2>Team Motto: <%= @team.motto %></h1>
 #  <% @team.members.each do |hero| %>
 #    <h2>Hero Name: <%= hero.name %></h2>
