--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,6 +1,6 @@
 <h1><%= @team.name %></h1>
   <h2>Team Motto: <%= @team.motto %></h1>
-    <% @heroes.where(@teamid).each do |hero| %>
+    <% @heroes.where(team_id: @team.id).each do |hero| %>
       <h2>Hero Name: <%= hero.name %></h2>
       <p>Hero Power: <%= hero.power %></p>
       <p>Hero Biography: <%= hero.bio %></p>
